--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    // Added
+    id 'androidx.navigation.safeargs.kotlin' version '2.5.0-alpha01' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
 task clean(type: Delete) {
