--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
@@ -47,6 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.fragment:fragment-ktx:1.5.2"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
@@ -85,6 +86,16 @@ dependencies {
     def moshiVersion = "1.13.0"
     implementation("com.squareup.moshi:moshi-kotlin:$moshiVersion")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion")
+
+    // Database
+    def roomVersion = "2.4.2"
+    def sqlcipherVersion = "4.4.3"
+    def datastoreVersion = "1.0.0"
+    kapt( "androidx.room:room-compiler:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")
+    implementation( "androidx.room:room-runtime:$roomVersion")
+    implementation( "net.zetetic:android-database-sqlcipher:$sqlcipherVersion")
+    implementation( "androidx.datastore:datastore-preferences:$datastoreVersion")
 
     // Multiple screen size lib
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
