--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bs23.githubrepositories">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".GithubRepositories"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/github_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/github_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubRepositories"
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.App.SplashLauncher"
         tools:targetApi="31">
         <activity
             android:name=".view.activity.MainActivity"
