Add: Repository details page added with formatted date.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,7 @@ dependencies {
 
     // Mock Web Server
     implementation("com.squareup.okhttp3:mockwebserver:4.9.1")
+
+    // Swipe to refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
